fix: check for horizontal scrolling on volume slider

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -70,7 +70,7 @@ body {
   }
   to {
     transform: scale(1) translate3d(0, 0, 0);
-    margin-right: 40px;
+    margin-right: 50px;
   }
 }
 
@@ -83,7 +83,7 @@ body {
 @keyframes volumeOutScale {
   from {
     transform: scale(1) translate3d(0, 0, 0);
-    margin-right: 40px;
+    margin-right: 50px;
   }
   to {
     transform: scale(0) translate3d(100%, 0, 0);
